--- a/site/src/assets/components/cabecalho/index.css
+++ b/site/src/assets/components/cabecalho/index.css
@@ -9,8 +9,8 @@
 
 .logouf69{
     border-radius: 260px;
-    width: 75px;
-    height: 75px;
+    width: 6vw;
+    height: 6vw;
     margin: 5px 0px;
 }
 
@@ -25,24 +25,32 @@
     align-items: center;
 }
 
+.container-dos-titulos{
+    width: 80vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
 .titulo-cabeçalho{
     color: #ffff00;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 30px;
+    font-size: 2.5vw;
 
 }
 
 .links-cabecalho{
-    margin: 0 60px;
+    margin: 0 6%;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration-color: white;
     text-decoration: none;
     color: #ffffff;
-    font-size: 20px;
+    font-size: 1.5vw;
     font-weight: bold;
     letter-spacing: 3px;
     box-shadow: #ffff00;
-    transition: 0.2s;
+    text-align: center;
 }
 
 .links-cabecalho:hover{
@@ -58,4 +66,8 @@
 .links-cabecalho:enabled{
     transition: 0.2s;
     color: #ffff00;
+}
+
+.date{
+    color: #ffffff;
 }
